src/objects/Site_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Site Contacts</relationshipLabel>
        <relationshipName>Site_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Site Contacts</relationshipLabel>
        <relationshipName>Site_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Site Contact</label>
    <nameField>
        <displayFormat>SC{000000000}</displayFormat>
        <label>Site Contacts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Contacts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>